--- a/datacenter-project/#src/components/base/_burger-menu.html
+++ b/datacenter-project/#src/components/base/_burger-menu.html
@@ -18,6 +18,7 @@
                     <li><a href="colocation.html">Размещение сервера</a></li>
                     <li><a href="dedicated.html">Аренда сервера </a></li>
                     <li><a href="software.html">Программное обеспечение</a></li>
+                    <li><a href="email.html">HataMail</a></li>
                     <li><a href="other.html">Другие услуги</a></li>
                 </ul>
             </div>
