--- a/datacenter-project/#src/components/hatamail/_FAQ.html
+++ b/datacenter-project/#src/components/hatamail/_FAQ.html
@@ -1,6 +1,6 @@
 <section class="hm-faq section-padding" id="faq">
     <div class="container hm__container hm-faq__container">
-        <div class="tag">FAQ</div>
+<!--        <div class="tag">FAQ</div>-->
         <h3 class="hm__title">Популярные вопросы</h3>
                 <div class="hm-faq__cards layout-2-column">
                     <div class="left-column">
