--- a/datacenter-project/#src/components/hatamail/_advantages.html
+++ b/datacenter-project/#src/components/hatamail/_advantages.html
@@ -1,14 +1,14 @@
 <section class="hm-advantages section-padding" id="advantages">
     <div class="container hm__container hm-advantages__container">
-        <div class="tag">Преимущества</div>
+<!--        <div class="tag">Преимущества</div>-->
         <h3 class="hm__title">Преимущества корпоративной <br> почты HataMaill</h3>
         <div class="layout-2-column layout-2-column_reverse">
             <div class="hm-card">
                 <img src="img/hatamail/advantages/sla.svg" alt="sla.svg">
-                <p class="hm-card__text">Полное соответствие требованиям законодательства Республике Беларусь по защите
+                <p>Полное соответствие требованиям законодательства Республике Беларусь по защите
                     и хранению персональных данных и использованию национального сегмента сети Интернет</p>
                 <span class="hm-card__line"></span>
-                <p class="hm-card__text hm-card__text_bold">SLA (соглашение об уровне обслуживания)</p>
+                <p>SLA (соглашение об уровне обслуживания)</p>
             </div>
             <div class="hm-card">
                 <h5 class="hm__subtitle-block">Фиксированная цена</h5>
@@ -51,7 +51,7 @@
             <div class="tag tag_no-border btn-watch">Узнать больше</div>
         </div>
         <div class="layout-2-column">
-            <div class="hm-card hm-card__advantages hm-card__advantages_color">
+            <div class="hm-card hm-card__advantages">
                 <h4 class="hm__subtitle-block">Opensource</h4>
                 <p>Мы используем только opensource решения, которые помогают защитить вас от санкций и связанных с ними рисков - потери данных и остановки работы бизнеса</p>
             </div>
