--- a/datacenter-project/#src/components/hatamail/_services.html
+++ b/datacenter-project/#src/components/hatamail/_services.html
@@ -1,6 +1,6 @@
 <section class="hm-services section-padding">
     <div class="hm__container hm-services__container container">
-        <div class="tag">Сервисы</div>
+<!--        <div class="tag">Сервисы</div>-->
         <h3 class="hm__title">Почта и сервисы <br> только под вашим контролем</h3>
         <h4>Храните ваши данные на своем почтовом сервере <br>
             не передавая их Google, Yandex, Microsoft, Apple и третьим лицам</h4>
@@ -33,7 +33,7 @@
                             Настраивайте вашу почту под ваши задачи и цели</p>
                     </li>
                     <li>
-                        <img src="img/hatamail/services/nextCloud.svg" alt="nextCloud.svg">
+                        <img src="img/hatamail/services/cloud.svg" alt="cloud.svg">
                         <h5 class="hm__subtitle-block">Облачное файловое хранилище NextCloud</h5>
                         <p>Загружайте файлы в хранилище на сервере из любого места и любого устройства, управляйте доступом к ним.</p>
                     </li>
