--- a/datacenter-project/#src/components/hatamail/_tariff.html
+++ b/datacenter-project/#src/components/hatamail/_tariff.html
@@ -1,6 +1,6 @@
 <section class="hm-tariff section-padding" id="tariff">
     <div class="container hm__container hm-tariff__container">
-        <div class="tag">Тарифы</div>
+<!--        <div class="tag">Тарифы</div>-->
         <h3 class="hm__title">Калькулятор тарифов</h3>
         <div class="hm-tariff__hm-calculator">
             <div class="hm-calculator__description">
