--- a/datacenter-project/#src/components/hatamail/_whywe.html
+++ b/datacenter-project/#src/components/hatamail/_whywe.html
@@ -1,6 +1,6 @@
 <section class="hm-why section-padding"  id="why_we">
   <div class="container hm__container hm-why__container">
-    <div class="tag">Почему мы</div>
+<!--    <div class="tag">Почему мы</div>-->
     <h3 class="hm__title">DataHata</h3>
     <div class="hm-why__cards layout-4-column">
       <div class="hm-why__card">
