--- a/datacenter-project/#src/components/layout/_header.html
+++ b/datacenter-project/#src/components/layout/_header.html
@@ -18,6 +18,7 @@
                         <li><a class="menu-sub__link" href="colocation.html">Размещение серверного оборудования</a></li>
                         <li><a class="menu-sub__link" href="dedicated.html">Аренда сервера</a></li>
                         <li><a class="menu-sub__link" href="software.html">Программное обеспечение</a></li>
+                        <li><a class="menu-sub__link" href="email.html">HataMail</a></li>
                         <li><a class="menu-sub__link" href="other.html">Другие услуги</a></li>
                     </ul>
                 </li>
