--- a/datacenter-project/#src/scss/abstarct/variable.scss
+++ b/datacenter-project/#src/scss/abstarct/variable.scss
@@ -13,9 +13,15 @@ $color-gradient-layer1: #1f78e0;
 $color-gradient-layer2: #00c2ff;
 $hm-black-light: #454545;
 $hm-black-dark: #252525;
+$hm-black-light-5: rgba(69, 69, 69, 0.05);
 $hm-black-light-30: rgba(69, 69, 69, 0.30);
+
 $hm-purple: #5E4574;
 $hm-bg: #F5F5F7;
+$hm-primary: #1f78e0;
+$hm-primary-80: rgba(31, 120, 224, 0.80);
+$hm-primary-50: rgba(31, 120, 224, 0.50);
+
 
 
 
