--- a/datacenter-project/#src/components/hatamail/_possibilities.html
+++ b/datacenter-project/#src/components/hatamail/_possibilities.html
@@ -1,6 +1,6 @@
 <section class="hm-possibilities section-padding" id="possibilities">
     <div class="container hm__container hm-possibilities__container">
-        <div class="tag">Возможности</div>
+<!--        <div class="tag">Возможности</div>-->
         <h3 class="hm__title">Используйте возможности <br> почты HataMail</h3>
         <div class="tab__container">
             <label class="tab-label" for="mail" data-info="mail">Почта
@@ -33,13 +33,10 @@
                         <h5 class="hm__subtitle-block">Почта</h5>
                         <ul>
                             <li>Привязывайте неограниченное количества своих доменов, создавайте неограниченное
-                                количество
-                                почтовых адресов
-                            </li>
+                                количество почтовых адресов </li>
                             <li>Делитесь доступом с коллегами к почтовым ящикам и папкам</li>
                             <li>Настраивайте внутреннюю рассылку, сбор почты из другого ящика, автоответчик и
-                                переадресацию
-                            </li>
+                                переадресацию </li>
                             <li>Применяйте специальные настройки антиспама, чтобы исходящие письма не попадали в спам
                             </li>
                             <li>Архивируйте переписку и восстанавливайте утерянную</li>
@@ -52,7 +49,7 @@
                     <img src="img/hatamail/possibilities/mail.png" alt="mail.png">
                 </div>
                 <div class="info__storage hm__info__items layout-2-column layout-2-column_reverse">
-                    <img src="img/hatamail/possibilities/mail.png" alt="mail.png">
+                    <img src="img/hatamail/possibilities/cloud.png" alt="cloud.png">
                     <div class="storage info__container">
                         <h5 class="hm__subtitle-block">Облачное файловое хранилище Next Cloud</h5>
                         <ul>
