--- a/datacenter-project/#src/scss/components/hatamail/form.scss
+++ b/datacenter-project/#src/scss/components/hatamail/form.scss
@@ -4,8 +4,9 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  border-radius: 16px;
-  @extend %violet-gradient-bg;
+  border-radius: 8px;
+  background-color: $hm-primary-80;
+  color: $color-light;
 
   @media (max-width: 768px) {
     padding: 40px 17px;
