--- a/datacenter-project/#src/components/hatamail/_possibilities.html
+++ b/datacenter-project/#src/components/hatamail/_possibilities.html
@@ -48,7 +48,7 @@
                     </div>
                     <img src="img/hatamail/possibilities/mail.png" alt="mail.png">
                 </div>
-                <div class="info__storage hm__info__items layout-2-column layout-2-column_reverse">
+                <div class="info__storage hm__info__items layout-2-column">
                     <img src="img/hatamail/possibilities/cloud.png" alt="cloud.png">
                     <div class="storage info__container">
                         <h5 class="hm__subtitle-block">Облачное файловое хранилище Next Cloud</h5>
