--- a/datacenter-project/#src/scss/components/hatamail/services.scss
+++ b/datacenter-project/#src/scss/components/hatamail/services.scss
@@ -31,10 +31,12 @@
 
     .prev {
       left: 10px;
+      padding-right: 20px;
     }
 
     .next {
       right: 10px;
+      padding-left: 20px;
     }
   }
 
