fix: fix margin

--- a/datacenter-project/#src/scss/components/hatamail/advantages.scss
+++ b/datacenter-project/#src/scss/components/hatamail/advantages.scss
@@ -69,7 +69,12 @@
 .hm-advantages {
   .hm__title {
     margin-bottom: 6.4rem;
+    @media (max-width: 420px) {
+      margin-bottom: 4rem;
+    }
   }
+
+
 
   .hm__subtitle-block{
     color: $hm-black-dark;
