--- a/datacenter-project/#src/components/hatamail/_tariff.html
+++ b/datacenter-project/#src/components/hatamail/_tariff.html
@@ -1,6 +1,6 @@
 <section class="hm-tariff section-padding" id="tariff">
     <div class="container hm__container hm-tariff__container">
-<!--        <div class="tag">Тарифы</div>-->
+        <!--        <div class="tag">Тарифы</div>-->
         <h3 class="hm__title">Калькулятор тарифов</h3>
         <div class="hm-tariff__hm-calculator">
             <div class="hm-calculator__description">
@@ -12,7 +12,7 @@
                     <img src="img/hatamail/tariff/calendar.svg" alt="calendar.svg">
                 </div>
                 <ul>
-                    <li>Бесплатный перенос почты и настройку</li>
+                    <li>Бесплатный перенос почты, настройку и ежемесячные работы по обслуживанию*</li>
                     <li>Доступ с любого устройства</li>
                     <li>Неограниченное количество доменов и почтовых ящиков</li>
                     <li>Безлимитный входящий и исходящий трафик</li>
@@ -25,28 +25,33 @@
                 <h5>Выберите объем дискового <br> пространства</h5>
                 <div class="hm-calculator__buttons">
                     <label class="hm-calculator__label" for="100">100 Гб
-                        <input type="radio" id="100" name="price" value="230">
+                        <input type="radio" id="100" name="price" value="230" data-time="1 час">
                     </label>
                     <label class="hm-calculator__label" for="300">300 Гб
-                        <input type="radio" id="300" name="price" value="500">
+                        <input type="radio" id="300" name="price" value="500" data-time="2 час">
                     </label>
                     <label class="hm-calculator__label" for="500">500 Гб
-                        <input type="radio" id="500" name="price" value="750">
+                        <input type="radio" id="500" name="price" value="750" data-time="3 час">
                     </label>
                     <label class="hm-calculator__label" for="700">700 Гб
-                        <input type="radio" id="700" name="price" value="1150">
+                        <input type="radio" id="700" name="price" value="1150" data-time="4 час">
                     </label>
                     <label class="hm-calculator__label" for="1000"> > 1000 Гб
-                        <input type="radio" id="1000" name="price" value="null">
+                        <input type="radio" id="1000" name="price" value="null" data-time="">
                     </label>
                 </div>
-                <div class="hm-calculator__price">
-                    <p><span class="price">0</span> BYN/месяц</p>
-                    <p>с учетом стоимости НДС</p>
-                </div>
-                <div class="hm-calculator__price-text">
-                    Свяжитесь с нами чтобы получить<br>
-                    персональную консультацию
+                <div class="hm-calculator__info">
+                    <div class="hm-calculator__time-text">
+                        <p><span class="time"></span> работ по обслуживанию в месяц</p>
+                    </div>
+                    <div class="hm-calculator__price">
+                        <p><span class="price">0</span> BYN/месяц</p>
+                        <p>с учетом стоимости НДС</p>
+                    </div>
+                    <div class="hm-calculator__price-text">
+                        Свяжитесь с нами чтобы получить<br>
+                        персональную консультацию
+                    </div>
                 </div>
                 <a href="#hm_form" class="button button_colored"><span>Подключить</span></a>
             </div>
