--- a/datacenter-project/#src/scss/components/hatamail/tariff.scss
+++ b/datacenter-project/#src/scss/components/hatamail/tariff.scss
@@ -1,20 +1,20 @@
-.hm-tariff__hm-calculator{
+.hm-tariff__hm-calculator {
   margin-top: 40px;
   display: flex;
   align-items: center;
 
-  @media(max-width: 768px){
+  @media(max-width: 768px) {
     flex-direction: column;
     width: 100%;
     align-items: stretch;
   }
 
-  @media(max-width: 420px){
+  @media(max-width: 420px) {
     margin-top: 0;
   }
 }
 
-.hm-calculator{
+.hm-calculator {
   border-radius: 16px;
   background: $color-light;
   padding: 64px 35px 98px;
@@ -23,14 +23,14 @@
   align-items: center;
   max-width: 534px;
 
-  @media(max-width: 768px){
+  @media(max-width: 768px) {
     max-width: 100%;
     border-radius: 0 0 16px 16px;
     padding: 48px 35px;
   }
 
 
-  h5{
+  h5 {
     text-align: center;
     color: $color-primary;
     @include font($size: 2rem, $weight: 600);
@@ -39,7 +39,7 @@
 
 }
 
-.hm-calculator__buttons{
+.hm-calculator__buttons {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -48,7 +48,7 @@
   margin-top: 56px;
 
 
-  .hm-calculator__label{
+  .hm-calculator__label {
     display: flex;
     padding: 16px 24px;
     justify-content: center;
@@ -61,52 +61,52 @@
     position: relative;
     cursor: pointer;
 
-    &:last-child{
-     align-self: center;
+    &:last-child {
+      align-self: center;
     }
 
-    &_active{
+    &_active {
       border: 1px solid #252525;
       color: #252525;
     }
   }
 
-  input[type='radio']{
+  input[type='radio'] {
     opacity: 0;
     position: absolute;
   }
 }
-.hm-calculator__price{
-  padding: 80px 0;
-  height: 250px;
+
+.hm-calculator__price {
+  margin: 8px 0 80px;
+  height:87px;
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 8px;
 
-  .price{
+  .price {
     color: #000;
     @include font($size: 4.8rem, $weight: 600);
   }
 
-  & > p{
+  & > p {
     color: $hm-black-dark;
     @include font($size: 2rem, $weight: 400, $height: 140%);
   }
 }
 
-.hm-calculator__price-text{
+.hm-calculator__price-text {
   display: none;
-  padding: 80px 0;
-  height: 250px;
-  align-items: center;
+  height: 175px;
+  align-items:flex-start;
   justify-content: center;
   text-align: center;
-  color: $color-primary;
+  color: $hm-primary;
   @include font($size: 2rem, $weight: 400, $height: 140%);
 }
 
-.hm-calculator__description{
+.hm-calculator__description {
   border-radius: 16px 0 0 16px;
   background: rgba(69, 69, 69, 0.10);
   padding: 89px 44px 89px 84px;
@@ -118,18 +118,18 @@
   flex-shrink: 0;
 
 
-  @media(max-width: 1000px){
+  @media(max-width: 1000px) {
     flex-shrink: 1;
   }
 
 
-  @media(max-width: 768px){
+  @media(max-width: 768px) {
     max-width: 100%;
     border-radius: 16px 16px 0 0;
     padding: 48px 35px;
   }
 
-  &:before, &:after{
+  &:before, &:after {
     content: '';
     position: absolute;
     left: 50%;
@@ -137,27 +137,28 @@
     @include card-line($color-light);
   }
 
-  &:after{
+  &:after {
     bottom: 40px;
   }
-  &:before{
+
+  &:before {
     top: 40px;
   }
 
-  h5{
+  h5 {
     color: $hm-black-light;
     @include font($size: 2rem, $weight: 600);
   }
 
 
-  ul > li{
+  ul > li {
     color: $hm-black-light;
     @include font($size: 1.8rem, $weight: 400, $height: 140%);
     margin-bottom: 16px;
 
-    &:last-child{
+    &:last-child {
       margin-bottom: 0;
-      @media(max-width: 768px){
+      @media(max-width: 768px) {
         margin-bottom: 16px;
       }
     }
@@ -165,18 +166,38 @@
 
 }
 
-.description-icons{
+.description-icons {
   margin: 40px 0 24px;
   justify-content: center;
   max-width: 350px;
   gap: 1rem;
-   & > *{
-     text-align: center;
-     @media (max-width: 768px) {
-       & > img{
-         width: 40px;
-         height: 40px;
-       }
-     }
-   }
+
+  & > * {
+    text-align: center;
+    @media (max-width: 768px) {
+      & > img {
+        width: 40px;
+        height: 40px;
+      }
+    }
+  }
+}
+
+
+.hm-calculator__time-text {
+  visibility: hidden;
+  margin-top: 31px;
+  text-align: center;
+  color: $hm-primary;
+  @include font($size: 1.8rem, $weight: 400, $height: 140%);
+
+  .time{
+    position: relative;
+
+    &:before{
+      content: "*";
+      position: absolute;
+      left: -10px;
+    }
+  }
 }
