fix: fix open acc

--- a/datacenter-project/#src/scss/base/accordion.scss
+++ b/datacenter-project/#src/scss/base/accordion.scss
@@ -15,6 +15,7 @@
     padding: 15px;
     user-select: none;
     font-size: 1.8rem;
+    cursor: pointer;
 
     @media (max-width: 420px) {
       padding: 10px;
