--- a/datacenter-project/#src/scss/components/services/services.scss
+++ b/datacenter-project/#src/scss/components/services/services.scss
@@ -135,6 +135,7 @@
     position: relative;
     font-size: 3rem;
     font-weight: 700;
+    cursor: pointer;
 
     span {
       position: absolute;
