--- a/#src/scss/components/hatamail/form.scss
+++ b/#src/scss/components/hatamail/form.scss
@@ -48,15 +48,13 @@
   }
 
   .iti {
-    width: 320px !important;
-    height: 51px !important;
-    margin-bottom: 16px !important;
-    padding: 0 !important;
-    border: none !important;
+    width: 320px;
+    height: 51px;
+    margin-bottom: 16px;
 
     #phoneInput{
-      width: 100% !important;
-      padding-left:70px !important;
+      width: 100%;
+      padding-left: 70px;
     }
   }
 
